--- a/MW-edu-portal/src/index.css
+++ b/MW-edu-portal/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgb(56, 56, 56);
+  background-color: #7bbdfc;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,7 +25,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -46,6 +47,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
@@ -65,4 +67,54 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.searchBarContainer
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.search-bar
+{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  height: 40px;
+  width: 500px;
+  font-size: 25px;
+  color: black;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
+input
+{
+  background-color: white;
+  color: black;
+  border: none;
+  width: 95%;
+  padding-left: 10px;
+}
+
+input:focus
+{
+  outline: 2px solid #000000;
+  border-radius: 10px;
+  height: 40px;
+  width: 500px;
+}
+
+.searchButton
+{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  height: 30px;
+  width: 100px;
+  color: black;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
