--- a/MW-edu-portal/src/pages/WelcomePage.css
+++ b/MW-edu-portal/src/pages/WelcomePage.css
@@ -2,17 +2,18 @@
 {
     display: flex;
     flex-direction: column;
-    text-align: center;
 }
 
 .uploadButton button
 {
+    display: flex;
     height: 50px;
     width: 150px;
 }
 
 .uploadbutton-container
 {
+    display: flex;
     z-index: 10;
     top: 20px;
     height: 25%;
