--- a/MW-edu-portal/src/pages/WelcomePage.css
+++ b/MW-edu-portal/src/pages/WelcomePage.css
@@ -7,18 +7,29 @@
 .uploadButton button
 {
     display: flex;
+    align-self: start;
     height: 50px;
     width: 150px;
 }
 
-.uploadbutton-container
+.uploadButton-container
 {
     display: flex;
+    justify-content: space-between;
     z-index: 10;
     top: 20px;
     height: 25%;
 
 }
+
+.moduleButton button
+{
+    display: flex;
+    height: 50px;
+    width: 150px;
+}
+
+
 
 .button
 {
