--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.searchBarContainer
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  padding: 20px;
+}
+
+.search-bar
+{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  height: 40px;
+  width: 500px;
+  font-size: 25px;
+  color: black;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
+input
+{
+  background-color: white;
+  color: black;
+  border: none;
+  width: 95%;
+  padding-left: 10px;
+}
+
+input:focus
+{
+  outline: 2px solid #000000;
+  border-radius: 10px;
+  height: 40px;
+  width: 500px;
+}
+
+.searchButton
+{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  height: 30px;
+  width: 100px;
+  color: black;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
